Change test names to match convention. Add Callisto- prefix to docker compose. Update Test container to point to sql in changelog

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.3'
 
 services:
-  accruals-restapi:
+  callisto-accruals-restapi:
     image: maven:3.8.3-openjdk-17
     entrypoint: ["mvn", "spring-boot:run",
                  "-Duser.home=/Users/1000",
@@ -28,7 +28,6 @@ services:
       - accruals-database-migrations
     networks:
       - callisto
-
 
   accruals-database-migrations:
     image: "liquibase/liquibase:4.15.0"
