--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
 		<sonar.language>java</sonar.language>
 		<sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
         <checkstyle-maven-plugin.version>3.2.0</checkstyle-maven-plugin.version>
-		<callisto.jparest.version>0.1.13-EAHW-2814-SNAPSHOT</callisto.jparest.version>
+		<callisto.jparest.version>0.1.13</callisto.jparest.version>
 		<test.containers.version>1.18.3</test.containers.version>
 	</properties>
 	<dependencies>
