--- a/.drone.yml
+++ b/.drone.yml
@@ -365,7 +365,14 @@ trigger:
   event:
     - promote
   target:
+    exclude:
     - production
+#To reinstate prod deployment change to trigger to:
+#trigger:
+#  event:
+#    - promote
+#  target:
+#      - production
 
 steps:
   - name: deploy_to_prod
