stop deployments to dev and test

--- a/.drone.yml
+++ b/.drone.yml
@@ -237,8 +237,16 @@ depends_on:
 
 trigger:
   event:
-    - pull_request
-
+    exclude:
+      - push
+      - pull_request
+      - tag
+      - promote
+      - rollback
+#to reinstate branch deploys on pull requests change trigger to
+#trigger:
+# event:
+#   - pull_request
 steps:
   - name: branch_deploy
     image: pelotech/drone-helm3
@@ -277,10 +285,17 @@ depends_on:
 
 trigger:
   event:
-    include:
-      - push
     exclude:
+      - push
+      - pull_request
+      - tag
       - promote
+      - rollback
+  #to reinstate dev deploy on pull requests change trigger to
+  #trigger:
+  # event:
+  #    include:
+  #      - push
   branch:
     - main
 
@@ -320,10 +335,17 @@ depends_on:
 
 trigger:
   event:
-    include:
-      - push
     exclude:
+      - push
+      - pull_request
+      - tag
       - promote
+      - rollback
+  #to reinstate test deploy on pull requests change trigger to
+  #trigger:
+  # event:
+  #    include:
+  #      - push
   branch:
     - main
 
